# kerbal-space-program-controller

./: .gitignore  CMakeLists.txt  Dockerfile  Panel.drawio  README.md  compile-and-run-dev.sh  compile.sh  ksc-controller.service  ksp-controller.service  problems.txt  renovate.json  run.sh  update-and-run.sh  update.sh
doc/: datasheets.txt  fritzing.fzz
src/: SevenSegment.h  base-header.h  main.cpp  shift-outputs.h  test.c
